[package]
name = "folio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
# path = "src/main.rs"

[workspace]
members = [
    "js_bridge"
]

[profile.release]
opt-level = 's'

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.5"
log = "0.4.6"
wasm-logger = "0.2.0"
regex = "1.5.4"
serde_json = "1.0"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
js_bridge = {path = "./js_bridge"}
getrandom = { version = "0.2", features = ["js"] }
pulldown-cmark = { version = "0.9.1", default-features = false }

[dependencies.web-sys]
version = "0.3.56"
features = [
    "HtmlSelectElement", 
    "HtmlCollection"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false